profile section updates

--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -51,3 +51,54 @@
     aspect-ratio: 1/1;
     border-radius: 50%;
 }
+.friends{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 13px;
+}
+.friends div{
+    display: flex;
+    flex-direction: column;
+}
+.friends span{
+    color: #9f9ff9;
+    font-size: 11px;
+}
+.friends:hover{
+    background-color: #077eff;
+}
+.friends:hover span{
+    color: white;
+}
+.ls-nav .menu{
+    position: relative;
+    padding: 10px 0px;
+}
+
+.menu .sub-menu{
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 130px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: white;
+    color: black;
+    display: none;
+}
+.sub-menu hr{
+    border: none;
+    height: 1px;
+    background: #a4a4a4;
+    margin: 8px 0px;
+}
+.sub-menu p{
+    cursor: pointer;
+    font-size: 14px;
+}
+.menu:hover .sub-menu{
+    display: block;
+}
