--- a/src/pages/profileUpdate/profileUpdate.css
+++ b/src/pages/profileUpdate/profileUpdate.css
@@ -10,7 +10,7 @@
     background: white;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     min-width: 700px;
     border-radius: 10px;
 }
@@ -37,7 +37,21 @@
     cursor: pointer;
 }
 .profile label img{
-    width: 50%;
+    width: 50px;
     aspect-ratio: 1/1;
     border-radius: 50%;
+}
+.profile input, textarea{
+    padding:10px;
+    min-width: 300px;
+    border: 1px solid #c9c9c9;
+    outline-color: #077eff;
+}
+.profile form button{
+    border: none;
+    color: white;
+    background-color: #077eff;
+    padding: 8px;
+    font-size: 16px;
+    cursor: pointer;
 }
